# AlgoVisual

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  post_a.md
StructsAndAlgorithms/include/: binary_search_tree.h  bubble_sort.h  common.h  common_traits.h  graph.h  heap_sort.h  imgui.ini  insertion_sort.h  linked_list.h  merge_sort.h  quick_sort.h  struct_exception.h
StructsAndAlgorithms/src/: common.cpp  common_traits.cpp  struct_exception.cpp
Tests/src/: binary_search_tree_tests.cpp  graph_tests.cpp
Visualizer/include/: Event.h  global.h  misc.h  options.h  render_list.h  update_list.h  visual_container.h
Visualizer/include/Graphics/: Button.h
Visualizer/include/OptionRenderers/: AlgorithmRenderer.h  BinarySearchTreeRenderer.h  GraphRenderer.h  OptionRenderer.h  imgui.ini
Visualizer/src/: global.cpp  imgui.ini  main.cpp  misc.cpp  options.cpp  rlImGui.cpp
Visualizer/src/Graphics/: Button.cpp
Visualizer/src/OptionRenderers/: AlgorithmRenderer.cpp  BinarySearchTreeRenderer.cpp  GraphRenderer.cpp  OptionRenderer.cpp  imgui.ini
docs/: _config.yml  index.md
docs/performance/: algorithm_analysis.md  binary_search_tree_analysis.md
include/AlgoVisual/: misc.h  render_list.h  rlImGui.h  test.h  update_list.h
include/AlgoVisual/DataStructures/: binary_search_tree.h  linked_list.h  linked_list_old.h
include/AlgoVisual/Graphics/: Button.h
src/: main.cpp  misc.cpp  rlImGui.cpp
src/Graphics/: Button.cpp
test/src/: algorithm_tests.cpp  binary_search_tree_tests.cpp  graph_tests.cpp  graph_tests_a.cpp  linked_list_tests.cpp  merge_sort_tests.cpp  test_merge_sort.cpp
tests/src/: linked_list_tests.cpp
